--- a/config/yugabyte/test/range_write/yb_colocated_terminal24/update_varying_composite_index.yaml
+++ b/config/yugabyte/test/range_write/yb_colocated_terminal24/update_varying_composite_index.yaml
@@ -1,9 +1,8 @@
 type: YUGABYTE
 driver: com.yugabyte.Driver
-url: jdbc:yugabytedb://{{endpoint}}:5433/yugabyte?sslmode=require&ApplicationName=featurebench&reWriteBatchedInserts=true
+url: jdbc:yugabytedb://{{endpoint}}:5433/yugabyte?sslmode=require&ApplicationName=featurebench&reWriteBatchedInserts=true&load-balance=false
 username: {{username}}
 password: {{password}}
-
 createdb: drop database if exists yb_colocated; create database yb_colocated with colocated=true
 batchsize: 128
 isolation: TRANSACTION_REPEATABLE_READ
@@ -42,19 +41,19 @@ microbenchmark:
             -   table: index_test_
                 count: 4
 
-                rows: 1000000
+                rows: 2000000
                 columns:
                     -   name: id
                         util: PrimaryIntGen
                         params:
                             - 1
-                            - 1000000
+                            - 2000000
                     -   name: col_int_
                         count: 10
                         util: RandomNumber
                         params:
                             - 1
-                            - 1000000
+                            - 2000000
                     -   name: col_varchar_
                         count: 3
                         util: RandomAString
@@ -71,70 +70,47 @@ microbenchmark:
         executeRules:
             -   workload: 0_column_composite_index_test
                 run:
-                    -   name: Insert_0_column_composite_index_test
+                    -   name: Update_0_column_composite_index_test
                         weight: 100
                         queries:
-                            -   query: INSERT INTO index_test_1 (id, col_int_1, col_int_2, col_int_3, col_int_4, col_int_5, col_int_6, col_int_7, col_int_8, col_int_9, col_int_10, col_varchar_1, col_varchar_2, col_varchar_3, col_date, col_boolean) values (?, ?,?,?,?,?,?,?,?,?,?,?,?,?,?,?)
-                                count: 10
-                                bindings:
-                                    -   util: PrimaryIntGen
-                                        params: [ 1000001, 100000000 ]
-                                    -   util: RandomNumber
-                                        count: 10
-                                        params: [ 1000001, 100000000 ]
-                                    -   util: RandomAString
-                                        count: 4
-                                        params: [ 20, 20 ]
-                                    -   util: RandomBoolean
+                             -   query: UPDATE index_test_1 SET col_int_1 = ? where id = ?
+                                 bindings:
+                                     -   util: RandomNumber
+                                         params: [ 1, 2000000 ]
+                                     -   util: RandomNumber
+                                         params: [ 1, 2000000 ]
             -   workload: 1_column_composite_index_test
                 run:
-                    -   name: Insert_1_column_composite_index_test
+                    -   name: Update_1_column_composite_index_test
                         weight: 100
                         queries:
-                            -   query: INSERT INTO index_test_2 (id, col_int_1, col_int_2, col_int_3, col_int_4, col_int_5, col_int_6, col_int_7, col_int_8, col_int_9, col_int_10, col_varchar_1, col_varchar_2, col_varchar_3, col_date, col_boolean) values (?, ?,?,?,?,?,?,?,?,?,?,?,?,?,?,?)
-                                count: 10
-                                bindings:
-                                    -   util: PrimaryIntGen
-                                        params: [ 1000001, 100000000 ]
-                                    -   util: RandomNumber
-                                        count: 10
-                                        params: [ 1000001, 100000000 ]
-                                    -   util: RandomAString
-                                        count: 4
-                                        params: [ 20, 20 ]
-                                    -   util: RandomBoolean
+                             -   query: UPDATE index_test_2 SET col_int_1 = ? where id = ?
+                                 bindings:
+                                     -   util: RandomNumber
+                                         params: [ 1, 2000000 ]
+                                     -   util: RandomNumber
+                                         params: [ 1, 2000000 ]
             -   workload: 2_column_composite_index_test
                 run:
-                    -   name: Insert_column_composite_index_test
+                    -   name: Update_column_composite_index_test
                         weight: 100
                         queries:
-                            -   query: INSERT INTO index_test_3 (id, col_int_1, col_int_2, col_int_3, col_int_4, col_int_5, col_int_6, col_int_7, col_int_8, col_int_9, col_int_10, col_varchar_1, col_varchar_2, col_varchar_3, col_date, col_boolean) values (?, ?,?,?,?,?,?,?,?,?,?,?,?,?,?,?)
-                                count: 10
-                                bindings:
-                                    -   util: PrimaryIntGen
-                                        params: [ 1000001, 100000000 ]
-                                    -   util: RandomNumber
-                                        count: 10
-                                        params: [ 1000001, 100000000 ]
-                                    -   util: RandomAString
-                                        count: 4
-                                        params: [ 20, 20 ]
-                                    -   util: RandomBoolean
+                             -   query: UPDATE index_test_3 SET col_int_1 = ?, col_int_2 = ? where id = ?
+                                 bindings:
+                                     -   util: RandomNumber
+                                         count: 2
+                                         params: [ 1, 2000000 ]
+                                     -   util: RandomNumber
+                                         params: [ 1, 2000000 ]
             -   workload: 5_column_composite_index_test
                 run:
-                    -   name: Insert_column_composite_index_test
+                    -   name: Update_column_composite_index_test
                         weight: 100
                         queries:
-                            -   query: INSERT INTO index_test_4 (id, col_int_1, col_int_2, col_int_3, col_int_4, col_int_5, col_int_6, col_int_7, col_int_8, col_int_9, col_int_10, col_varchar_1, col_varchar_2, col_varchar_3, col_date, col_boolean) values (?, ?,?,?,?,?,?,?,?,?,?,?,?,?,?,?)
-                                count: 10
-                                bindings:
-                                    -   util: PrimaryIntGen
-                                        params: [ 1000001, 100000000 ]
-                                    -   util: RandomNumber
-                                        count: 10
-                                        params: [ 1000001, 100000000 ]
-                                    -   util: RandomAString
-                                        count: 4
-                                        params: [ 20, 20 ]
-                                    -   util: RandomBoolean
-
+                              -   query: UPDATE index_test_4 SET col_int_1 = ?, col_int_2 = ?, col_int_3 = ?, col_int_4 = ?, col_int_5 = ? where id = ?
+                                  bindings:
+                                      -   util: RandomNumber
+                                          count: 5
+                                          params: [ 1, 2000000 ]
+                                      -   util: RandomNumber
+                                          params: [ 1, 2000000 ]
