--- a/config/yugabyte/test/range_write/yb_colocated_terminal24/update_varying_index.yaml
+++ b/config/yugabyte/test/range_write/yb_colocated_terminal24/update_varying_index.yaml
@@ -1,9 +1,8 @@
 type: YUGABYTE
 driver: com.yugabyte.Driver
-url: jdbc:yugabytedb://{{endpoint}}:5433/yugabyte?sslmode=require&ApplicationName=featurebench&reWriteBatchedInserts=true
+url: jdbc:yugabytedb://{{endpoint}}:5433/yugabyte?sslmode=require&ApplicationName=featurebench&reWriteBatchedInserts=true&load-balance=false
 username: {{username}}
 password: {{password}}
-
 createdb: drop database if exists yb_colocated; create database yb_colocated with colocated=true
 batchsize: 128
 isolation: TRANSACTION_REPEATABLE_READ
@@ -31,8 +30,21 @@ microbenchmark:
             - create table index_test_3 (id bigint, col_int_1 int, col_int_2 int, col_int_3 int, col_int_4 int, col_int_5 int, col_int_6 int, col_int_7 int, col_int_8 int, col_int_9 int, col_int_10 int, col_varchar_1 varchar(20), col_varchar_2 varchar(20), col_varchar_3 varchar(20), col_date text, col_boolean boolean, primary key (id asc))
             - create table index_test_4 (id bigint, col_int_1 int, col_int_2 int, col_int_3 int, col_int_4 int, col_int_5 int, col_int_6 int, col_int_7 int, col_int_8 int, col_int_9 int, col_int_10 int, col_varchar_1 varchar(20), col_varchar_2 varchar(20), col_varchar_3 varchar(20), col_date text, col_boolean boolean, primary key (id asc))
             - create index index_test_2_idx1 on index_test_2(col_int_1 asc);
-            - create index index_test_3_idx1 on index_test_3(col_int_1 asc, col_int_2 asc);
-            - create index index_test_4_idx1 on index_test_4(col_int_1 asc, col_int_2 asc, col_int_3 asc, col_int_4 asc, col_int_5 asc);
+            - create index index_test_3_idx1 on index_test_3(col_int_1 asc);
+            - create index index_test_3_idx2 on index_test_3(col_int_2 asc);
+            - create index index_test_3_idx3 on index_test_3(col_int_3 asc);
+            - create index index_test_3_idx4 on index_test_3(col_int_4 asc);
+            - create index index_test_3_idx5 on index_test_3(col_int_5 asc);
+            - create index index_test_4_idx1 on index_test_4(col_int_1 asc);
+            - create index index_test_4_idx2 on index_test_4(col_int_2 asc);
+            - create index index_test_4_idx3 on index_test_4(col_int_3 asc);
+            - create index index_test_4_idx4 on index_test_4(col_int_4 asc);
+            - create index index_test_4_idx5 on index_test_4(col_int_5 asc);
+            - create index index_test_4_idx6 on index_test_4(col_int_6 asc);
+            - create index index_test_4_idx7 on index_test_4(col_int_7 asc);
+            - create index index_test_4_idx8 on index_test_4(col_int_8 asc);
+            - create index index_test_4_idx9 on index_test_4(col_int_9 asc);
+            - create index index_test_4_idx10 on index_test_4(col_int_10 asc);
         cleanup:
             - drop table if exists index_test_1;
             - drop table if exists index_test_2;
@@ -41,20 +53,19 @@ microbenchmark:
         loadRules:
             -   table: index_test_
                 count: 4
-
-                rows: 1000000
+                rows: 2000000
                 columns:
                     -   name: id
                         util: PrimaryIntGen
                         params:
                             - 1
-                            - 1000000
+                            - 2000000
                     -   name: col_int_
                         count: 10
                         util: RandomNumber
                         params:
                             - 1
-                            - 1000000
+                            - 2000000
                     -   name: col_varchar_
                         count: 3
                         util: RandomAString
@@ -69,72 +80,54 @@ microbenchmark:
                     -   name: col_boolean
                         util: RandomBoolean
         executeRules:
-            -   workload: 0_column_composite_index_test
+            -   workload: no_index
                 run:
-                    -   name: Insert_0_column_composite_index_test
+                    -   name: Update_without_index_test
                         weight: 100
                         queries:
-                            -   query: INSERT INTO index_test_1 (id, col_int_1, col_int_2, col_int_3, col_int_4, col_int_5, col_int_6, col_int_7, col_int_8, col_int_9, col_int_10, col_varchar_1, col_varchar_2, col_varchar_3, col_date, col_boolean) values (?, ?,?,?,?,?,?,?,?,?,?,?,?,?,?,?)
-                                count: 10
+                            -   query: UPDATE index_test_1 SET col_int_1 = ? where id = ?
+                                count: 1
                                 bindings:
-                                    -   util: PrimaryIntGen
-                                        params: [ 1000001, 100000000 ]
                                     -   util: RandomNumber
-                                        count: 10
-                                        params: [ 1000001, 100000000 ]
-                                    -   util: RandomAString
-                                        count: 4
-                                        params: [ 20, 20 ]
-                                    -   util: RandomBoolean
-            -   workload: 1_column_composite_index_test
+                                        params: [ 1, 2000000 ]
+                                    -   util: RandomNumber
+                                        params: [ 1, 2000000 ]
+            -   workload: 1_index_test
                 run:
-                    -   name: Insert_1_column_composite_index_test
+                    -   name: Update_with_1_index_test
                         weight: 100
                         queries:
-                            -   query: INSERT INTO index_test_2 (id, col_int_1, col_int_2, col_int_3, col_int_4, col_int_5, col_int_6, col_int_7, col_int_8, col_int_9, col_int_10, col_varchar_1, col_varchar_2, col_varchar_3, col_date, col_boolean) values (?, ?,?,?,?,?,?,?,?,?,?,?,?,?,?,?)
-                                count: 10
+                            -   query: UPDATE index_test_2 SET col_int_1 = ? where id = ?
+                                count: 1
                                 bindings:
-                                    -   util: PrimaryIntGen
-                                        params: [ 1000001, 100000000 ]
                                     -   util: RandomNumber
-                                        count: 10
-                                        params: [ 1000001, 100000000 ]
-                                    -   util: RandomAString
-                                        count: 4
-                                        params: [ 20, 20 ]
-                                    -   util: RandomBoolean
-            -   workload: 2_column_composite_index_test
+                                        params: [ 1, 2000000 ]
+                                    -   util: RandomNumber
+                                        params: [ 1, 2000000 ]
+            -   workload: 5_index_test
                 run:
-                    -   name: Insert_column_composite_index_test
+                    -   name: Update_with_5_index_test
                         weight: 100
                         queries:
-                            -   query: INSERT INTO index_test_3 (id, col_int_1, col_int_2, col_int_3, col_int_4, col_int_5, col_int_6, col_int_7, col_int_8, col_int_9, col_int_10, col_varchar_1, col_varchar_2, col_varchar_3, col_date, col_boolean) values (?, ?,?,?,?,?,?,?,?,?,?,?,?,?,?,?)
-                                count: 10
+                            -   query: UPDATE index_test_3 SET col_int_1 = ?, col_int_2 = ?, col_int_3 = ?, col_int_4 = ?, col_int_5 = ? where id = ?
+                                count: 1
                                 bindings:
-                                    -   util: PrimaryIntGen
-                                        params: [ 1000001, 100000000 ]
                                     -   util: RandomNumber
-                                        count: 10
-                                        params: [ 1000001, 100000000 ]
-                                    -   util: RandomAString
-                                        count: 4
-                                        params: [ 20, 20 ]
-                                    -   util: RandomBoolean
-            -   workload: 5_column_composite_index_test
+                                        count: 5
+                                        params: [ 1, 2000000 ]
+                                    -   util: RandomNumber
+                                        params: [ 1, 2000000 ]
+            -   workload: 10_index_test
                 run:
-                    -   name: Insert_column_composite_index_test
+                    -   name: Update_with_10_index_test
                         weight: 100
                         queries:
-                            -   query: INSERT INTO index_test_4 (id, col_int_1, col_int_2, col_int_3, col_int_4, col_int_5, col_int_6, col_int_7, col_int_8, col_int_9, col_int_10, col_varchar_1, col_varchar_2, col_varchar_3, col_date, col_boolean) values (?, ?,?,?,?,?,?,?,?,?,?,?,?,?,?,?)
-                                count: 10
+                            -   query: UPDATE index_test_4 SET col_int_1 = ?, col_int_2 = ?, col_int_3 = ?, col_int_4 = ?, col_int_5 = ?, col_int_6 = ?, col_int_7 = ?, col_int_8 = ?, col_int_9 = ?, col_int_10 = ? where id = ?
+                                count: 1
                                 bindings:
-                                    -   util: PrimaryIntGen
-                                        params: [ 1000001, 100000000 ]
                                     -   util: RandomNumber
                                         count: 10
-                                        params: [ 1000001, 100000000 ]
-                                    -   util: RandomAString
-                                        count: 4
-                                        params: [ 20, 20 ]
-                                    -   util: RandomBoolean
+                                        params: [ 1, 2000000 ]
+                                    -   util: RandomNumber
+                                        params: [ 1, 2000000 ]
 
