--- a/config/yugabyte/regression_pipelines/foreign_key/yugabyte/FK_G2_varyingFKcount_parent_table_ops.yaml
+++ b/config/yugabyte/regression_pipelines/foreign_key/yugabyte/FK_G2_varyingFKcount_parent_table_ops.yaml
@@ -36,10 +36,12 @@ microbenchmark:
             - create table projects_with_2_ref_1_child(id int primary key, uid1 int unique, uid2 int unique, name varchar(20) not null, start_date date not null, end_date date, budget decimal(10,2));
             - create table projects_with_3_ref_1_child(id int primary key, uid1 int unique, uid2 int unique, uid3 int unique, name varchar(20) not null, start_date date not null, end_date date, budget decimal(10,2));
             - create table projects_without_ref(id int primary key, uid int unique not null, name varchar(20) not null, start_date date not null, end_date date, budget decimal(10,2));
+            - create table projects_with_2_ref_1_child_no_idx(id int primary key, uid1 int unique, uid2 int unique, name varchar(20) not null, start_date date not null, end_date date, budget decimal(10,2));
 
             - create table employees_with_1_fk(id int primary key,name varchar(20) not null, email varchar(100) not null, phone varchar(15), position varchar(10), salary decimal(10,2), project_id int not null);
             - create table employees_with_2_fk_1_parent(id int primary key,name varchar(20) not null, email varchar(100) not null, phone varchar(15), position varchar(10), salary decimal(10,2), project_uid1 int not null, project_uid2 int not null);
             - create table employees_with_3_fk_1_parent(id int primary key,name varchar(20) not null, email varchar(100) not null, phone varchar(15), position varchar(10), salary decimal(10,2), project_uid1 int not null, project_uid2 int not null, project_uid3 int not null);
+            - create table employees_with_2_fk_1_parent_no_idx(id int primary key,name varchar(20) not null, email varchar(100) not null, phone varchar(15), position varchar(10), salary decimal(10,2), project_uid1 int not null, project_uid2 int not null);
 
             - CREATE INDEX project_uid_index ON employees_with_1_fk (project_id);
             - CREATE INDEX project_uid1_index ON employees_with_2_fk_1_parent (project_uid1);
@@ -104,6 +106,31 @@ microbenchmark:
                     params: [1, 1000000, 2]
 
             - table: projects_with_2_ref_1_child
+              rows: 100000
+              columns:
+                  - name: id
+                    util: PrimaryIntGen
+                    params: [1, 100000]
+                  - name: uid1
+                    util: PrimaryIntGen
+                    params: [1, 100000]
+                  - name: uid2
+                    util: PrimaryIntGen
+                    params: [1, 100000]
+                  - name: name
+                    util: RandomAString
+                    params: [1, 20]
+                  - name: start_date
+                    util: RandomDateBtwYears
+                    params: [2000, 2025]
+                  - name: end_date
+                    util: RandomDateBtwYears
+                    params: [2000, 2025]
+                  - name: budget
+                    util: RandomNoWithDecimalPoints
+                    params: [1, 1000000, 2]
+
+            - table: projects_with_2_ref_1_child_no_idx
               rows: 100000
               columns:
                   - name: id
@@ -209,6 +236,65 @@ microbenchmark:
                     util: CyclicSeqIntGen
                     params: [1,100000]
 
+            - table: employees_with_2_fk_1_parent_no_idx
+              rows: 1000000
+              columns:
+                  - name: id
+                    util: PrimaryIntGen
+                    params: [1, 1000000]
+                  - name: name
+                    util: RandomAString
+                    params: [1, 20]
+                  - name: email
+                    util: RandomAString
+                    params: [1, 100]
+                  - name: phone
+                    util: RandomNstring
+                    params: [10, 15]
+                  - name: position
+                    util: RandomAString
+                    params: [1, 10]
+                  - name: salary
+                    util: RandomNoWithDecimalPoints
+                    params: [1, 1000000, 2]
+                  - name: project_uid1
+                    util: CyclicSeqIntGen
+                    params: [1,100000]
+                  - name: project_uid2
+                    util: CyclicSeqIntGen
+                    params: [1,100000]
+
+            - table: employees_with_3_fk_1_parent
+              rows: 1000000
+              columns:
+                  - name: id
+                    util: PrimaryIntGen
+                    params: [1, 1000000]
+                  - name: name
+                    util: RandomAString
+                    params: [1, 20]
+                  - name: email
+                    util: RandomAString
+                    params: [1, 100]
+                  - name: phone
+                    util: RandomNstring
+                    params: [10, 15]
+                  - name: position
+                    util: RandomAString
+                    params: [1, 10]
+                  - name: salary
+                    util: RandomNoWithDecimalPoints
+                    params: [1, 1000000, 2]
+                  - name: project_uid1
+                    util: CyclicSeqIntGen
+                    params: [1,100000]
+                  - name: project_uid2
+                    util: CyclicSeqIntGen
+                    params: [1,100000]
+                  - name: project_uid3
+                    util: CyclicSeqIntGen
+                    params: [1,100000]
+
         afterLoad:
             - ALTER TABLE employees_with_1_fk add CONSTRAINT fk_project FOREIGN KEY (project_id) REFERENCES projects_with_1_ref(uid) ON DELETE CASCADE ON UPDATE CASCADE;
             - ALTER TABLE employees_with_2_fk_1_parent add CONSTRAINT fk_project1 FOREIGN KEY (project_uid1) REFERENCES projects_with_2_ref_1_child(uid1) ON DELETE CASCADE ON UPDATE CASCADE;
@@ -244,7 +330,7 @@ microbenchmark:
                   - name: FK_G2_5_2-fk_update
                     weight: 100
                     queries:
-                        - query: update projects_with_2_ref_1_child set uid1=uid1+100000, uid2=uid2+100000 where id=?;
+                        - query: update projects_with_2_ref_1_child_no_idx set uid1=uid1+100000, uid2=uid2+100000 where id=?;
                           bindings:
                             - util: PrimaryIntGen
                               params: [1, 100000]
@@ -255,6 +341,16 @@ microbenchmark:
                     weight: 100
                     queries:
                         - query: update projects_with_3_ref_1_child set uid1=uid1+100000, uid2=uid2+100000, uid3=uid3+100000 where id=?;
+                          bindings:
+                            - util: PrimaryIntGen
+                              params: [1, 100000]
+
+            - workload: FK_G2_5_2-fk_update-no-idx
+              run:
+                  - name: FK_G2_5_2-fk_update
+                    weight: 100
+                    queries:
+                        - query: update projects_with_2_ref_1_child set uid1=uid1+100000, uid2=uid2+100000 where id=?;
                           bindings:
                             - util: PrimaryIntGen
                               params: [1, 100000]
