--- a/config/yugabyte/sample_featurebench_config.yaml
+++ b/config/yugabyte/sample_featurebench_config.yaml
@@ -1,20 +1,19 @@
 type: YUGABYTE
 driver: com.yugabyte.Driver
-url: jdbc:yugabytedb://172.151.21.180:5433/yugabyte?sslmode=require&ApplicationName=featurebench&reWriteBatchedInserts=true
+url: jdbc:yugabytedb://localhost:5433/yugabyte?sslmode=disable&ApplicationName=featurebench&reWriteBatchedInserts=true
 username: yugabyte
-password: Password@321
+password: null
 batchsize: 128
 isolation: TRANSACTION_REPEATABLE_READ
 loaderthreads: 1
-optimalThreads: true
 collect_pg_stat_statements: true
-terminals: 10
+terminals: 1
 works:
     work:
-        time_secs: 300
+        time_secs: 5
         active_terminals: 1
         rate: 1000
-        warmup: 30
+        warmup: 0
 microbenchmark:
     class: com.oltpbenchmark.benchmarks.featurebench.customworkload.YBDefaultMicroBenchmark
     properties:
@@ -24,10 +23,10 @@ microbenchmark:
         - CREATE TABLE demo100col (id INT, col1 TEXT, primary key (id ASC)) ;
         loadRules:
         -   table: demo100col
-            rows: 1000
+            rows: 10
             columns:
             -   name: id
-                util: RandomUniqueIntGen
+                util: PrimaryIntGen
                 params:
                 - 1
                 - 1000
@@ -43,7 +42,7 @@ microbenchmark:
                 queries:
                 -   query: INSERT INTO demo100col VALUES(?,?)
                     bindings:
-                    -   util: RandomUniqueIntGen
+                    -   util: PrimaryIntGen
                         params:
                         - 10000
                         - 100000
